2009-01-30	Mike Massonnet
Remove the origin of the clipboard from the history items.

	- panel-plugin/history.h, panel-plugin/history.c:
		Don't store from where a clipboard originated from (useless).
		Update the public methods and the struct ClipmanHistoryItem.
	- panel-plugin/collector.c, panel-plugin/panel-plugin.c:
		Update the code to use the new function declarations.

2009-01-30	Mike Massonnet
Set the settings dialog "buggy".

	- panel-plugin/panel-plugin.c:
		In a way to fix weird bugs, the settings dialog is no more
		transient for the top level widget of the panel plugin.
	- panel-plugin/settings-dialog.glade:
		Both dialogs "action-dialog" and "command-dialog" skip the
		taskbar and have the type hint "dialog".

2009-01-26	Mike Massonnet
Actions are configurable through the settings dialog.

	- panel-plugin/actions.c:
		Fix a crasher in clipman_actions_load() when reading the XML
		file from the user config directory.  Add debug messages when
		loading and saving the XML file.
	- panel-plugin/actions.c(clipman_actions_get_entries):
		New method to retrieve the list of every acion.
	- panel-plugin/actions.c(clipman_actions_remove_command):
		Renamed the method clipman_actions_remove() to
		clipman_actions_remove_command() and re-implement
		clipman_actions_remove() to remove an entry entirely.
	- panel-plugin/settings-dialog.glade:
		Rename some widgets and add signal handlers.
	- panel-plugin/panel-plugin.c:
		Set up the actions dialog in panel_plugin_configure() and a
		add a load of new callbacks and functions specific to the
		settings dialog to add/edit/delete actions.

2009-01-26	Mike Massonnet
Small tweak in the GRegex.

	- panel-plugin/actions.c(clipman_actions_add):
		Add the compile flag "caseless" and move the match option
		"anchored" to the compile flags.
	- configure.ac.in:
		Add GTK+/GLib requirements to 2.10/2.14.

2009-01-25	Mike Massonnet
Forget to add support for GLib < 2.16 to save the actions.

	- panel-plugin/actions.c: